ontopia-engine/src/test/resources/net/ontopia/testdata/ltm/error/multiscope.ltm
[bongo = "Bongo"]
[bingo = "Bingo"]
[rongo = "Rongo"]
[ugga  =  / bongo bingo rongo "ugga"]